# Goobbue

./: CMakeLists.txt  README.md  action.cpp  action.h  actionApplication.cpp  actionApplication.h  crafter.cpp  crafter.h  craftingClass.cpp  craftingClass.h  effects.h  expectimax.cpp  expectimax.h  jsonLoader.cpp  jsonLoader.h  main.cpp  recipe.cpp  recipe.h  worldState.cpp  worldState.h
Data/: Crafters.json  Recipes.json  Skills.json
